--- a/_config.yaml
+++ b/_config.yaml
@@ -1,73 +1,31 @@
-theme: Tactile
+# Site settings
+title: My Awesome Site
+description: > # Use ">" to break the line
+  This is my awesome site where I blog about tech.
+baseurl: "" # The subpath of your site, e.g. /blog
+url: "https://yourusername.github.io" # The base hostname & protocol for your site
 
-# Where things are
-source              : .
-destination         : ./_site
-collections_dir     : .
-plugins_dir         : _plugins # takes an array of strings and loads plugins in that order
-layouts_dir         : _layouts
-data_dir            : _data
-includes_dir        : _includes
-sass:
-  sass_dir: _sass
-collections:
-  posts:
-    output          : true
+# Build settings
+markdown: kramdown
+theme: minima
 
-# Handling Reading
-safe                : false
-include             : [".htaccess"]
-exclude             : ["Gemfile", "Gemfile.lock", "node_modules", "vendor/bundle/", "vendor/cache/", "vendor/gems/", "vendor/ruby/"]
-keep_files          : [".git", ".svn"]
-encoding            : "utf-8"
-markdown_ext        : "markdown,mkdown,mkdn,mkd,md"
-strict_front_matter : false
-
-# Filtering Content
-show_drafts         : null
-limit_posts         : 0
-future              : false
-unpublished         : false
+# Custom settings
+author:
+  name: Blanca Calvo
+  email: your-email@example.com
 
 # Plugins
-whitelist           : []
-plugins             : []
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
 
-# Conversion
-markdown            : kramdown
-highlighter         : rouge
-lsi                 : false
-excerpt_separator   : "\n\n"
-incremental         : false
+# Exclusions
+exclude:
+  - README.md
+  - Gemfile
+  - Gemfile.lock
 
-# Serving
-detach              : false
-port                : 4000
-host                : 127.0.0.1
-baseurl             : "" # does not include hostname
-show_dir_listing    : false
-
-# Outputting
-permalink           : date
-paginate_path       : /page:num
-timezone            : null
-
-quiet               : false
-verbose             : false
-defaults            : []
-
-liquid:
-  error_mode        : warn
-  strict_filters    : false
-  strict_variables  : false
-
-# Markdown Processors
-kramdown:
-  auto_ids          : true
-  entity_output     : as_char
-  toc_levels        : [1, 2, 3, 4, 5, 6]
-  smart_quotes      : lsquo,rsquo,ldquo,rdquo
-  input             : GFM
-  hard_wrap         : false
-  footnote_nr       : 1
-  show_warnings     : false
+# Social media links
+social:
+  twitter: your_twitter_handle
+  github: your_github_username
