--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ url: "https://yourusername.github.io" # The base hostname & protocol for your si
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: Tactile
 
 # Custom settings
 author:
