--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: Critical Questions Generation
 description: Shared task hosted at 12th Workshop on Argument Mining, and co-located in ACL 2015 (Vienna, Austria)
+image: assets/img/background.png
