--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Critical Questions Generation Shared Task
-description: Hosted at the 12th Workshop on Argument Mining, and co-located in ACL 2025 (Vienna, Austria)
+description: Hosted at The 12th Workshop on Argument Mining, and co-located in ACL 2025 (Vienna, Austria)
